manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-eks
  labels:
    app: fastapi-eks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-eks
  template:
    metadata:
      labels:
        app: fastapi-eks
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: fastapi-eks
        image: flaxen/fastapi-eks:v6-arm64
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
