manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-eks
spec:
  type: ClusterIP
  selector:
    app: fastapi-eks
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
